# spore

./: .gitignore  README.md  build_sae_dataset.py  collect_activations.py  index.html  pyproject.toml  reduce_activations.py  requirements.txt  server.py  streamlit_app.py  train_sae.py
.claude/: settings.json
data/nlf/stages/: stage_0.json  stage_1.json  stage_10.json  stage_2.json  stage_3.json  stage_4.json  stage_5.json  stage_6.json  stage_7.json  stage_8.json  stage_9.json
nlws/: system.py
scripts/: __init__.py
spore/: __init__.py  ai_client.py  cli.py  config.py  crawler.py  engine.py  models.py  search.py  visualizer.py
spore/activation_pipeline/: __init__.py  collector.py  corpus.py  io.py  reduction.py  sae.py  sae_dataset.py
spore/app/: __init__.py  attention_logit_lens.py  feature_map.py  feature_umap.py  latent_space.py  loader.py  metrics_comparison.py  prompt_trajectory.py  sae_dashboard.py  sae_feature.py  scatter.py  status_panel.py
spore/dashboard/: __init__.py
spore/nlf/: __init__.py  context_assembler.py  feedback_comparator.py  framework.py  models.py  response_formatter.py  slot_selector.py  variant_generator.py
spore/pipeline/: __init__.py
spore/spore_ai/: __init__.py  engine.py  feedback.py  generator.py  ingestion.py  models.py  ranker.py  selector.py  tokenizer.py
tests/: test_api.py  test_config.py  test_crawler.py  test_models.py  test_prompt_trajectory.py  test_search.py  test_visualizer.py
tests/nlf/: test_framework.py  test_models.py  test_pipeline.py
web/: index.html  training.html  visualizer.html
(+14 files in other folders)
